jinspark-lab/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jinsparklab-kubedeploy
  annotations:
    fluxcd.io/automated: "true"
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: jinsparklab-KubeDeploy
      app.kubernetes.io/name: jinsparklab
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: jinsparklab-KubeDeploy
        app.kubernetes.io/name: jinsparklab
    spec:
      automountServiceAccountToken: false
      containers:
        - image: 486403792456.dkr.ecr.us-east-1.amazonaws.com/jinspark-lab-ecr:1.0
          imagePullPolicy: Always
          name: backend
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 3000m
              memory: 2048Mi
            requests:
              cpu: 2000m
              memory: 1024Mi
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   privileged: false
            # readOnlyRootFilesystem: true
            # runAsNonRoot: true
            # runAsUser: 1000
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      # securityContext:
      #   fsGroupChangePolicy: Always
      #   runAsNonRoot: true
      setHostnameAsFQDN: false
