jinspark-lab/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jinsparklab-kubeingress-c8f96596
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: JinsparkLabALB
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    # SSL Configuration
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:486403792456:certificate/ff25a67e-dcb9-439a-9759-72c03197406d
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: jinsparklab-kubedeploy-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
